<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!--
    1. Added a custom border Background to drawing view which is defined
        in drawable folder so user can know how much screen area is allowed to draw..
    2. Added a margins to drawing view.
    -->

    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@id/ll_paint_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/image"
            />

        <com.example.drawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF" />

    </FrameLayout>





    <LinearLayout
        android:id="@+id/ll_paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_action_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Olive"
            android:onClick="paintClicked"
            android:contentDescription="@string/olive"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Olive" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:onClick="paintClicked"
            android:contentDescription="@string/black"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Horizon"
            android:onClick="paintClicked"
            android:contentDescription="@string/horizon"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Horizon" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Lavender"
            android:onClick="paintClicked"
            android:contentDescription="@string/lavender"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Lavender" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Terracotta"
            android:onClick="paintClicked"
            android:contentDescription="@string/terracotta"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Terracotta" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Spanish_Green"
            android:onClick="paintClicked"
            android:contentDescription="@string/spanish_green"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Spanish_Green" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Neptune"
            android:onClick="paintClicked"
            android:contentDescription="@string/neptune"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Neptune" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Rose"
            android:onClick="paintClicked"
            android:contentDescription="@string/rose"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Rose" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:onClick="paintClicked"
            android:contentDescription="@string/white"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white" />


        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/Random"
            android:onClick="paintClicked"
            android:contentDescription="@string/random"
            android:src="@drawable/pallet_normal"
            android:tag="@color/Random" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/ll_paint_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_brush"
            android:scaleType="fitXY" />

        <ImageButton
        android:id="@+id/ib_undo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:src="@drawable/undo"
            android:contentDescription="undo image"
        android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/ib_redo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="redo image"
            android:src="@drawable/redo"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/ib_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="gallery image"
            android:src="@drawable/ic_gallery"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/ib_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="save image"
            android:src="@drawable/ic_save"
            android:scaleType="fitXY" />



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>